--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,11 @@ android {
     defaultConfig {
         applicationId "com.example.login"
         minSdkVersion 16
+        multiDexEnabled true
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -27,9 +29,20 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    //noinspection GradleCompatible
+//   adleCompatible
+//    //// //   implementation 'com.android.support:design:27.1.1' implementation 'com.android.support:appcompat-v7:27.1.1'
+    //noinspection Gr
+    //noinspection GradleDependency
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    //  implementation 'androidx.navigation:navigation-fragment:2.0.0'
+    //   implementation 'androidx.navigation:navigation-ui:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'com.google.firebase:firebase-firestore:17.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
