--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.login">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -13,12 +16,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".ForgetPasswordActivity" />
-        <activity android:name=".Register" />
+        <activity android:name=".ForgetPasswordActivity" android:label="@string/app_name" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Register"  android:label="@string/app_name" android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".Signin"
             tools:ignore="ExtraText"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
